Change 3rd div width of mid-size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	    </div>
     </div>
     <div class = "col-lg-4 col-md-12" >
-    	<div class = "sushi sec">
+    	<div class = "sushi sec sec-md">
 		    <div class = "sec_title">Sushi</div>
 		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos qui aspernatur maiores quo impedit dolor voluptates incidunt ratione animi voluptas et reprehenderit, non repudiandae dolores recusandae nostrum amet earum consequuntur.
 		    </p>
